--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ book:
     - 6-serocatalytic.qmd
     - 7-ChangePoint.qmd
     - summary.qmd
+    - bibliography.qmd
 
 bibliography: references.bib
 
